<resources>
    <string name="app_name">PasswordApp</string>
    <string name="enter_text">Введите текст</string>
    <string name="paste_text">Вставьте текст с помощью кнопки</string>
    <string name="another_text_layout">EN &#8596; RU</string>
    <string name="copy_to_clipboard">Copy</string>
    <string name="paste_from_clipboard">Paste</string>
    <string name="text_was_copied">Текст скопирован</string>
    <string name="password_generation_welcome">Сгенерируем пароль</string>
    <string name="password_generation_check_strong">Проверим надежность</string>
    <string name="password_generation_which_symbols">Какие символы добавим?</string>
    <string name="password_generation_big_eng">Большие латинские буквы</string>
    <string name="password_generation_numbers">Цифры</string>
    <string name="password_generation_special_symb">Спец символы</string>
    <string name="password_generation_generate">Сгенерировать</string>
    <string name="password_strong">Надежный</string>
    <string name="password_medium">Средний</string>
    <string name="password_weak">Слабый</string>
    <string name="symbols_amount">Символов</string>
    <string name="ready_password">Готовый пароль</string>
    <string name="symbols_in_pswd">Символов в пароле</string>
    <string name="too_short_pswd_alert">Задано слишком малое число символов!</string>

    <string name="capital">capital</string>
    <string name="digits">digits</string>
    <string name="special">special</string>
    <string name="numberOfSymbols">numberOfSymbols</string>

    <item name="en_up_keyb" translatable="false" type="string">
        QWERTYUIOP{}ASDFGHJKL:"ZXCVBNM&lt;&gt;
    </item>
    <item name="en_low_keyb" translatable="false" type="string">
        qwertyuiop[]asdfghjkl;\'zxcvbnm,.
    </item>
    <item name="en_low" translatable="false" type="string">
        qwertyuiopasdfghjklzxcvbnm
    </item>
    <item name="en_up" translatable="false" type="string">
        QWERTYUIOPASDFGHJKLZXCVBNM
    </item>
    <item name="ru_up" translatable="false" type="string">
        ЙЦУКЕНГШЩЗХЪФЫВАПРОЛДЖЭЯЧСМИТЬБЮ
    </item>
    <item name="ru_low" translatable="false" type="string">
        йцукенгшщзхъфывапролджэячсмитьбю
    </item>
    <item name="num" translatable="false" type="string">
        1234567890
    </item>
    <item name="spec" translatable="false" type="string">
        ~!@#$%^&amp;*-_
    </item>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
</resources>