<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:scrollbarSize="7dp"
    android:background="@drawable/main_background"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <EditText
                android:id="@+id/enterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_text"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="37dp"></EditText>

            <Button
                android:id="@+id/copyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copy_to_clipboard"
                tools:layout_editor_absoluteX="184dp"
                tools:layout_editor_absoluteY="34dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/anotherLayoutTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paste_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/translateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/another_text_layout"
                    android:textSize="8sp"
                    tools:layout_editor_absoluteX="184dp"
                    tools:layout_editor_absoluteY="34dp" />

                <Button
                    android:id="@+id/pasteButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/paste_from_clipboard" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/numbersCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password_generation_numbers"
                        tools:layout_editor_absoluteX="36dp"
                        tools:layout_editor_absoluteY="387dp" />

                    <CheckBox
                        android:id="@+id/specialSymbCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password_generation_special_symb"
                        tools:layout_editor_absoluteX="36dp"
                        tools:layout_editor_absoluteY="491dp" />

                    <CheckBox
                        android:id="@+id/bigEngCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password_generation_big_eng"
                        tools:layout_editor_absoluteX="36dp"
                        tools:layout_editor_absoluteY="443dp" />
                </LinearLayout>

            </FrameLayout>
            <EditText
                android:id="@+id/numOfSymbolsInPswd"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:hint="@string/symbols_in_pswd"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="37dp"></EditText>

            <Button
                android:id="@+id/passwordGenerateButton"
                android:layout_width="174dp"
                android:layout_height="62dp"
                android:text="@string/password_generation_generate"
                tools:layout_editor_absoluteX="43dp"
                tools:layout_editor_absoluteY="553dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <TextView
        android:id="@+id/readyPasswordTextView"
        android:layout_width="159dp"
        android:layout_height="29dp"
        android:text="@string/ready_password" />

    <ProgressBar
        android:id="@+id/pswdStrengthProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="250dp"
        android:layout_height="24dp"
        android:background="#95D3CD"
        android:scrollbarSize="7dp" />

</LinearLayout>